# dakera-py

./: .claudeignore  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
.claude/: settings.json
.claude/rules/: sdk-conventions.md
.claude/skills/sdk-release/: SKILL.md
.github/: SECURITY.md  dependabot.yml  pull_request_template.md  release-drafter.yml
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  config.yml  feature_request.md  feature_request.yml
.github/workflows/: ci.yml  license-integrity.yml  release.yml
examples/: admin_operations.py  advanced.py  analytics.py  basic_usage.py  fulltext_search.py  hybrid_search.py  knowledge_graph.py  memory.py  ollama_memory_chat.py  ollama_memory_proxy.py  ops_diagnostics.py  tealtiger_governance.py  vector_operations.py
examples/playground/: chat_comparison.py  quickstart.py
src/dakera/: __init__.py  async_client.py  client.py  exceptions.py  models.py  session.py
src/dakera/integrations/: __init__.py  tealtiger.py
tests/: __init__.py  test_admin.py  test_analytics.py  test_client.py  test_integration.py  test_memory_extended.py  test_ops.py  test_playground_integration.py  test_session.py  test_smart_score.py  test_tealtiger.py  test_tif.py
