[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dakera"
version = "0.9.0"
description = "Python SDK for Dakera - AI memory platform"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Dakera Team"}
]
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Database",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]
keywords = ["vector", "database", "embedding", "similarity", "search", "ai", "ml", "memory", "dakera"]
dependencies = [
    "requests>=2.32.3",
    "urllib3>=2.6.3",
    "typing-extensions>=4.0.0;python_version<'3.10'",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "responses>=0.23.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
    "types-requests>=2.28.0",
]
async = [
    "httpx>=0.24.0",
]

[project.urls]
Homepage = "https://dakera.ai"
Documentation = "https://dakera.ai/docs/python"
Repository = "https://github.com/dakera-ai/dakera-py"
Issues = "https://github.com/dakera-ai/dakera-py/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
dakera = ["py.typed"]

[tool.mypy]
python_version = "3.9"
warn_return_any = false
warn_unused_configs = true
disallow_untyped_defs = true
strict = true

[[tool.mypy.overrides]]
module = ["httpx", "httpx.*"]
ignore_missing_imports = true

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "ANN", "B", "C4", "SIM"]
ignore = ["ANN101", "ANN102", "ANN401"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["ANN"]
"examples/**" = ["ANN"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
